styles/main.css
@font-face {
    font-family: 'SinaNovaReg';
    src: url('SinaNovaReg-webfont.woff2') format('woff2'),
         url('SinaNovaReg-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

:root {
  --main-color: white;
  --complement-color: #4F5551;
  --prae-blue: #2973FC;
}

body {
  margin: 0px;
  font-family: 'SinaNovaReg';
  color: var(--complement-color);
  font-size: 18px;
}


.preload * {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -ms-transition: none !important;
  -o-transition: none !important;
}

/* Splash page */

.center-me { 
  background: url(../assets/main.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 100vh;
  text-align: center;
}


#logo {
  width: 70%;
  margin-left: 10%;
  margin-right: 10%;
  margin-top: 0;
  margin-bottom: 10vh;
  max-width: 700px;
  min-width: 400px;
}

.main-btn {
  background-color: transparent;
  color: var(--main-color);
  border: 4px solid var(--main-color);
  transition: color 170ms ease-in-out, border-color 170ms ease-in-out;
  padding: 20px;
  text-decoration: none;
  font-size: 30px;
  letter-spacing: 2px;
}

.main-btn:hover {
  background-color: var(--main-color);
  color: var(--complement-color);
  border-color: var(--main-color);
}

/* Top nav */

.logo-mini {
  height: 170px;
}


.mid h1 {
  text-align: center;
}

.mid p {
  text-align: left;
}

.top {
  background: url(../assets/otherbg.jpg) no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 500px;
}

.about-top {
  background: url(../assets/about.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 500px;
}

.contact-top {
  background: url(../assets/contact.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 500px;
}

.prospects-top {
  background: url(../assets/prospects.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 500px;
}

.team-top {
  background: url(../assets/team.jpg) no-repeat center center fixed; 
    -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  height: 500px;
}

.mid {
  background-color: white;
  margin: auto;
  width: auto;
  max-width: 1020px;
  padding: 96px 32px;
  text-align: center;
}

.foot {
  height: 5vh;
  text-align: center;
  background-color: var(--main-color);
  color: var(--complement-color);
  padding-top: 3vh;
}

/* Navbar */

.navbar {
  display: flex;
  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 3s; /* Firefox < 16 */
    -ms-animation: fadein 3s; /* Internet Explorer */
     -o-animation: fadein 3s; /* Opera < 12.1 */
        animation: fadein 3s;
}

.nav-logo {
  flex-grow: 1;
}

.nav-header-links {
  text-align: right;
  flex-grow: 3;
  margin-top: 75px;
  letter-spacing: 2px;

}

.nav-header-links a {
  text-decoration: none;
  margin-right: 50px;
  color: #f2f2f2;

  transition:color 170ms ease-in-out,
}

.nav-header-links .contact-btn {
  border-radius: 300px;
  border: 2px solid;
  border-color: var(--main-color);
  background-color: transparent;
  color: var(--main-color);
  padding: 0.75em 1.5em !important;
}

.nav-header-links .contact-btn:hover {
  background-color: var(--main-color);
  color: var(--complement-color);
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Firefox < 16 */
@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Safari, Chrome and Opera > 12.1 */
@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Internet Explorer */
@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

/* Opera < 12.1 */
@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.nav-header-links a:hover {
  color: #fff;
}

.page-header {
  text-align: center;
  color: var(--main-color);
  font-size: 72px;
  margin-top: 70px;
  letter-spacing: 4px;
  padding: 0px 10%;
  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 1s; /* Firefox < 16 */
        -ms-animation: fadein 1s; /* Internet Explorer */
         -o-animation: fadein 1s; /* Opera < 12.1 */
            animation: fadein 1s;
}

/* About */

.center p {
  text-align: center;
}

/* Prospects */

#map {
  width: 100%;
}

/* Team */

.team-list {
  text-align: left;
}

.team-list h3 {
  font-size: 28px;
}

/*h5 {*/
/*  color: grey;*/
/*}*/

/* Contact */

.contact-form {
  text-align: left;
}

.contact-form input {
  width: 100%;
}

.contact-form-phone input {
  width: 50px;
}

#submit-btn {
  background-color: var(--prae-blue);
  color: var(--main-color);
}

.contact-form textarea {
  width: 100%;
}

.contact {
  text-align: center;
}

.contact p {
  text-align: center;
}

.mapouter {
  left: 50%;
  transform: translateX(-50%);
}

/* Mobile nav */

/* Style the navigation menu */
.topnav {
  overflow: hidden;
  background-color: #333;
  position: relative;
  display: none;
}

/* Hide the links inside the navigation menu (except for logo/home) */
.topnav #myLinks {
  display: none;
}

/* Style navigation menu links */
.topnav a {
  color: white;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
  display: block;
}

/* Style the hamburger menu */
.topnav a.icon {
  background: black;
  display: block;
  position: absolute;
  right: 0;
  top: 0;
}

/* Add a grey background color on mouse-over */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

/* Style the active link (or home/logo) */
.active {
  background-color: transparent;
  color: white;
}

